# lore

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  INSPIRATION.md  LICENSE  Makefile  PHASE4_REPORT.md  PLAN.md  README.md  RUST_BEST_PRACTICE.md  TEST-TOOLING-PLAN.md  UX-SPEC.md  deny.toml
.cargo/: mutants.toml
.claude/: settings.local.json
.claude/worktrees/stoic-yonath-5d90d6/: CLAUDE.md  PLAN.md  SYNC-ARCHITECTURE.md
.claude/worktrees/stoic-yonath-5d90d6/crates/lore-cli/src/: cli.rs
.claude/worktrees/stoic-yonath-5d90d6/crates/lore-core/migrations/: 0002_space_deleted_at.sql
.claude/worktrees/stoic-yonath-5d90d6/crates/lore-core/src/: db.rs  migrations.rs  search.rs
.claude/worktrees/stoic-yonath-5d90d6/crates/lore-core/tests/: db_test.rs
.claude/worktrees/stoic-yonath-5d90d6/crates/lore-server/: Cargo.toml
.claude/worktrees/stoic-yonath-5d90d6/crates/lore-server/src/: main.rs
.claude/worktrees/stoic-yonath-5d90d6/crates/lore-server/static/: app.css
.claude/worktrees/stoic-yonath-5d90d6/crates/lore-ui/assets/: app.css  editor.css  milkdown.js  tokens.css
.claude/worktrees/stoic-yonath-5d90d6/crates/lore-ui/js/: index.js
.claude/worktrees/stoic-yonath-5d90d6/crates/lore-ui/src/: keys.rs  main.rs  state.rs  texts.rs
.claude/worktrees/stoic-yonath-5d90d6/crates/lore-ui/src/views/: content_empty.rs  content_note.rs  list_files.rs  list_pages.rs  list_settings.rs  list_timeline.rs  list_trash.rs  mod.rs  sidebar.rs
.claude/worktrees/stoic-yonath-5d90d6/crates/lore-worker/: Cargo.toml
.claude/worktrees/stoic-yonath-5d90d6/crates/lore-worker/src/: main.rs
.github/workflows/: auto-tag.yml  ci.yml  deps-update.yml  release.yml
.sentrux/: rules.toml
crates/lore-cli/: Cargo.toml
crates/lore-cli/src/: cli.rs  main.rs  print.rs
crates/lore-core/: Cargo.toml  SCHEMA.md  build.rs
crates/lore-core/migrations/: 0001_initial.sql  0003_file_table.sql  0005_rewrite_attachment_urls.sql  0007_revision_triggers_completion.sql  0010_snapshot_thumb.sql  0011_snapshot_readability.sql  0012_drop_unused_readability_fields.sql  0013_note_import.sql  0014_note_import_rendered_hash.sql
crates/lore-core/src/: db.rs  error.rs  export.rs  export_md.rs  import_md.rs  lib.rs  merge.rs  migrations.rs  rules.rs  schema.sql  search.rs  seed.sql  serde_b64.rs  url_extract.rs  version.rs
crates/lore-core/src/db/: activity.rs  attachment.rs  file.rs  folder.rs  note.rs  space.rs  trash.rs  web_page.rs
crates/lore-core/tests/: db_test.rs  proptests.rs  snapshots.rs
crates/lore-core/tests/snapshots/: snapshots__snapshot_error_internal.snap  snapshots__snapshot_error_invalid_input.snap  snapshots__snapshot_error_not_found.snap  snapshots__snapshot_error_route_not_found.snap
crates/lore-e2e/: Cargo.toml
crates/lore-e2e/fixtures/: readability_cloudinit_62.html
crates/lore-e2e/src/: lib.rs
crates/lore-e2e/tests/: attachments.rs  errors.rs  navigation.rs  notes.rs  offline.rs  smoke.rs  sync.rs  toast.rs  web_versions.rs  wrapping.rs
crates/lore-server/: Cargo.toml
crates/lore-server/src/: handlers.rs  main.rs
crates/lore-server/static/: app.js  index.html
crates/lore-ui/: Cargo.toml  Dioxus.toml
crates/lore-ui/assets/: app.css  editor.css  icon.rgba  milkdown.js  tokens.css
crates/lore-ui/js/: build.mjs  index.js  package.json
crates/lore-ui/src/: data.rs  keys.rs  main.rs  platform.rs  state.rs  store.rs  texts.rs
crates/lore-ui/src/backend/: http.rs  local.rs  mod.rs
crates/lore-ui/src/views/: content_empty.rs  content_file.rs  content_note.rs  content_page.rs  content_rules.rs  content_spaces.rs  list_files.rs  list_notes.rs  list_pages.rs  list_search.rs  list_settings.rs  list_timeline.rs  list_trash.rs  mod.rs  sidebar.rs  toast.rs
crates/lore-ui/src/views/content_note/: actions.rs  attachments_panel.rs  bridges.rs  editor.rs  folder_tree.rs  mod.rs
crates/lore-worker/: Cargo.toml
crates/lore-worker/src/: archive.rs  main.rs  render.rs
dev-env/: flake.nix  update-wasm-bindgen.sh
tools/: web-snap.sh
tools/homebrew/: lore.cask.rb  lore.formula.rb
