[workspace]
members = ["crates/lore-core", "crates/lore-cli", "crates/lore-ui", "crates/lore-server", "crates/lore-worker", "crates/lore-e2e"]
resolver = "3"

# Shared package metadata — bumped here, every workspace crate inherits
# via `version.workspace = true` so a release bump is a one-line change.
[workspace.package]
version = "1.0.6"
edition = "2024"
license = "MIT"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.lints.clippy]
# Conservative set — no restriction lints here (unwrap_used, expect_used, etc)
# Those are added in a separate reviewed cleanup task, not in this batch.
