[package]
name = "lore-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lore"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
lore-core = { path = "../lore-core" }
rusqlite = "0.34"
url = "2"
