[package]
name = "lore-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1"
rusqlite = { version = "0.34", features = ["bundled", "vtab"] }
url = "2"
sha2 = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
# `#[mutants::skip]` attribute marker for cargo-mutants. Zero runtime impact.
mutants = "0.0.4"

# Kani formal verification harnesses live behind `#[cfg(kani)]`. They are
# invisible to `cargo build` / `cargo test` and only compile under
# `cargo kani`, so no extra dependency is needed here.

[lints.rust]
# Quiet the "unexpected cfg" lint for `#[cfg(kani)]` proof gates. Set by
# `cargo kani`; not set in regular builds.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
