[package]
name = "lore-core"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
# Native-only deps for the SQLite path. Off by default for WASM consumers
# (the future `HttpBackend` in `lore-ui`) which only need the row/error
# types and serde derives, never the SQL.
rusqlite = { version = "0.34", features = ["bundled", "vtab"], optional = true }
sha2 = { version = "0.10", optional = true }
regex = { version = "1", optional = true }

[features]
default = ["sqlite"]
# Pulls in rusqlite + native code so `db::*`, `migrations`, `search`,
# and the `From<rusqlite::Error>` impls compile. Disable for WASM
# builds: `default-features = false`.
sqlite = ["dep:rusqlite", "dep:sha2", "dep:regex"]

[dev-dependencies]
tempfile = "3"
# `#[mutants::skip]` attribute marker for cargo-mutants. Zero runtime impact.
mutants = "0.0.4"

# Kani formal verification harnesses live behind `#[cfg(kani)]`. They are
# invisible to `cargo build` / `cargo test` and only compile under
# `cargo kani`, so no extra dependency is needed here.

[lints.rust]
# Quiet the "unexpected cfg" lint for `#[cfg(kani)]` proof gates. Set by
# `cargo kani`; not set in regular builds.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
