[package]
name = "lore-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Pure dev/test crate — no library API consumed by the production binaries,
# no binary of its own. Integration tests under `tests/` spawn the real
# `lore-serve` binary as a subprocess and drive the WASM frontend through
# headless Chromium. Per the architecture rules the only allowed import is
# `lore-core`; everything else is reached over HTTP or via the DOM.

[lints]
workspace = true

[dependencies]
anyhow = "1"
base64 = "0.22"
chromiumoxide = "0.7"
futures-util = "0.3"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }

# `lore-core` is the one in-process dep allowed by the architecture rules.
# Lets tests seed DB state directly via the same SQL helpers the server
# uses, instead of going through a fragile HTTP-only setup. Test DB and
# server share the same WAL-mode SQLite file — concurrent reads + writes
# are safe.
lore-core = { path = "../lore-core" }
# Pinned to the same version `lore-core` uses; just for the `params!`
# macro and the `Connection` type in seeding helpers — no SQL elsewhere.
rusqlite = "0.34"
