[package]
name = "lore-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "lore-serve"
path = "src/main.rs"

[dependencies]
axum = "0.8"
dirs = "6"
lore-core = { path = "../lore-core" }
anyhow = "1"
rusqlite = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
url = "2"
base64 = "0.22"
