[package]
name = "lore-ui"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "lore-desktop"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
dirs = "6"
lore-core = { path = "../lore-core" }
anyhow = "1"
rusqlite = "0.34"
url = "2"
base64 = "0.22"
tokio = { version = "1", features = ["time"] }
rfd = "0.15"
chrono = "0.4"
async-trait = "0.1"
