[package]
name = "lore-worker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lore-worker"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chromiumoxide = "0.7"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
lore-core = { path = "../lore-core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = "0.34"
scraper = "0.22"
tokio = { version = "1", features = ["rt", "time", "macros"] }
url = "2"
