[package]
name = "lore-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lore-worker"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chromiumoxide = "0.7"
clap = { version = "4", features = ["derive", "env"] }
# Mozilla Readability port — produces a cleaned <article> blob from raw
# page HTML. Best-effort: pages without an extractable article (login
# walls, dashboards) just return None and we store NULL.
dom_smoothie = "0.17"
futures-util = "0.3"
# Only the PNG codec — JPEG/GIF/TIFF etc. would balloon binary size for no
# use. Worker screenshots arrive from Chrome as PNG and the thumbnail is
# re-encoded as PNG too (lossless previews, sub-100 KB at our 600 px width).
image = { version = "0.25", default-features = false, features = ["png"] }
lore-core = { path = "../lore-core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = "0.34"
scraper = "0.22"
tokio = { version = "1", features = ["rt", "time", "macros"] }
url = "2"
